<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">校园问答</string>
    <string name="img_des">图片介绍</string>
	<string name="question">问题</string>
	<string name="recommend">推荐</string>
	<string name="add">添加</string>
	<string name="rank">排行榜</string>
	<string name="mine">我</string>
	<string name="search">搜索</string>
	<string name="confirm">确认</string>
	<string name="cancle">取消</string>
	<string name="prompt">信息提示</string>
	<string name="content">提示内容</string>
	<string name="search_hint">输入查找</string>
	<string name="new_question">最新</string>
	<string name="hot_question">最火</string>
	<string name="profession_recommend">专业</string>
	<string name="fellow_townsman_recommend">老乡</string>
	<string name="answer">我要回答</string>
	<string name="title">标题</string>
	<string name="question_content">问题内容</string>
	<string name="nums">123</string>
	<string name="default_time">2008:08:08</string>
	<string name="default_reads">0</string>
	<string name="pageView">访问量</string>
	<string name="username">用户名</string>
	<string name="label">标签：</string>
	<string name="account">帐号</string>
	<string name="nicheng">昵称</string>
	<string name="nichenghint">编辑您的个性昵称</string>
	<string name="password">密码</string>
	<string name="email">邮箱</string>
	<string name="emailhint">输入您的邮箱</string>
	<string name="confirmpwd">确认密码</string>
	<string name="confirmpwdhint">核对您的设置密码</string>
	<string name="accounthit">邮箱/手机号/用户名</string>
	<string name="pwdhint">8-16位数字字母区分大小写</string>
	<string name="login">登录</string>
	<string name="loginblank">登    录</string>
	<string name="registerblank">注    册</string>
	<string name="register">注册</string>
	<string name="losepwd">忘记密码？</string>
	<string name="loading">数据加载中...</string>
	<string name="nodata">暂无数据...</string>
	
</resources>