<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <!-- 提问者头像 -->

                <cn.edu.cqut.utils.CircularImage
                    android:id="@+id/userImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/cool" />
                
                <!-- 提问者名字 -->
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/img_des"
                    android:src="@drawable/pageview" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pageView" />
                <!-- 阅读数 -->

                <TextView
                    android:id="@+id/read_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_reads"
                    android:textColor="@color/orange" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <!-- 问题标题 -->

            <TextView
                android:id="@+id/question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label"
                android:textColor="@color/orange"
                android:textSize="14sp" />
            <!-- 问题标签 -->

            <TextView
                android:id="@+id/question_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:singleLine="true"
                android:text="@string/label"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/red_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|bottom"
            android:text="@string/default_time"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>