<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <cn.edu.cqut.utils.HeadView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </cn.edu.cqut.utils.HeadView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="18dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nicheng"
                android:textColor="@color/orange"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/nicheng"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:background="@drawable/corners_bg_white"
                android:hint="@string/nichenghint"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/nicheng_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="@color/gray_white" />

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="18dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/orange"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/textMail"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:background="@drawable/corners_bg_white"
                android:hint="@string/emailhint"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/email_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="@color/gray_white" />
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="18dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/orange"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/passWd"
                android:layout_width="230dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:background="@drawable/corners_bg_white"
                android:hint="@string/pwdhint"
                android:textSize="16sp" />
 
            <ImageView
                android:id="@+id/pwd_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="@color/gray_white" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmpwd"
                android:textColor="@color/orange"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/confirmpwd"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:inputType="textPassword"
                android:background="@drawable/corners_bg_white"
                android:hint="@string/confirmpwdhint"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/confirmpwd_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <RelativeLayout
            android:id="@+id/layout_register"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerblank"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>