<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/orange"
    style="@style/BaseHead"
    android:layout_height="56dp">
    
	<!-- 左方图片 -->
    <ImageView
        android:id="@+id/left_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/img_des"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:layout_marginStart="10dp"
        android:src="@drawable/back" />

    <!-- 左方文字 -->
    <TextView
        android:id="@+id/left_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:adjustViewBounds="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:visibility="gone"
        android:textColor="#ffffff"
        android:text="@string/answer"
        />
    
    <!-- 中间标题 -->
    <TextView
        android:id="@+id/center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        style="@style/BaseHeadTitle"
        android:singleLine="true"
        android:clickable="true"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <!-- 右方图片 -->
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/right_image"
        android:layout_marginRight="15dp"
        android:maxHeight="20dp"
        android:maxWidth="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_des"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/right"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp" />
	
    <!-- 右方文字 -->
    <TextView
        android:id="@+id/right_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        android:textColor="#ffffff"
        android:text="@string/answer"
        />
</RelativeLayout>
